feat: enhance chart initialization error handling for improved stability

--- a/DESKTOPV2/index.html
+++ b/DESKTOPV2/index.html
@@ -1473,12 +1473,15 @@
                                     }
                                 });
 
-                                    console.log('[Chart] ✅ Initialized successfully with', cleanData.length, 'data points');
-                                } catch (error) {
-                                    console.error('[Chart] ❌ Failed to initialize:', error);
-                                    this.chartInstance = null;
-                                }
-                            }, 150); // 150ms delay for canvas stability
+                                console.log('[Chart] ✅ Initialized successfully with', cleanData.length, 'data points');
+                            } catch (error) {
+                                console.error('[Chart] ❌ Failed to initialize:', error);
+                                this.chartInstance = null;
+                            }
+                        }, 150); // 150ms delay for canvas stability
+                        } catch (error) {
+                            console.error('[Chart] Unexpected error in chart initialization:', error);
+                        }
                         };
 
                         // Start chart initialization attempt
