fix: remove redundant initialization call in main dashboard component for cleaner code

--- a/DESKTOPV2/index.html
+++ b/DESKTOPV2/index.html
@@ -666,7 +666,7 @@
     </div>
 
     <!-- Main Dashboard Content -->
-    <main class="main-content" x-data="dashboard()" x-init="init()" x-cloak>
+    <main class="main-content" x-data="dashboard()" x-cloak>
         <div class="dashboard-container">
             <!-- Hero Header -->
             <div class="dashboard-hero">
