--- a/DESKTOPV2/funcionario/ordens-funcionario.html
+++ b/DESKTOPV2/funcionario/ordens-funcionario.html
@@ -935,6 +935,124 @@
         grid-template-columns: 1fr;
       }
     }
+
+    /* CONFIRMATION DIALOG MODAL */
+    .confirm-dialog {
+      position: fixed;
+      inset: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 10000;
+    }
+
+    .confirm-overlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: -1;
+    }
+
+    .confirm-box {
+      background: white;
+      border-radius: 12px;
+      padding: 30px;
+      max-width: 450px;
+      width: 90%;
+      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
+      animation: slideUp 0.3s ease-out;
+    }
+
+    @keyframes slideUp {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .confirm-box h2 {
+      font-size: 1.5rem;
+      font-weight: 600;
+      color: #333;
+      margin-bottom: 12px;
+    }
+
+    .confirm-box p {
+      font-size: 0.95rem;
+      color: #666;
+      line-height: 1.6;
+      margin-bottom: 30px;
+    }
+
+    .confirm-buttons {
+      display: flex;
+      gap: 12px;
+      justify-content: flex-end;
+    }
+
+    .btn-cancel {
+      padding: 10px 24px;
+      border: 2px solid #ddd;
+      background: white;
+      color: #333;
+      border-radius: 8px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.2s;
+      font-family: inherit;
+    }
+
+    .btn-cancel:hover {
+      background: #f5f5f5;
+      border-color: #999;
+    }
+
+    .btn-confirm {
+      padding: 10px 24px;
+      border: none;
+      background: #28a745;
+      color: white;
+      border-radius: 8px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.2s;
+      font-family: inherit;
+    }
+
+    .btn-confirm:hover {
+      background: #218838;
+      transform: translateY(-2px);
+      box-shadow: 0 4px 12px rgba(40, 167, 69, 0.3);
+    }
+
+    .btn-confirm:active {
+      transform: translateY(0);
+    }
+
+    @media (max-width: 600px) {
+      .confirm-box {
+        padding: 24px;
+        max-width: 95%;
+      }
+
+      .confirm-box h2 {
+        font-size: 1.25rem;
+      }
+
+      .confirm-buttons {
+        gap: 10px;
+      }
+
+      .btn-cancel,
+      .btn-confirm {
+        padding: 10px 16px;
+        font-size: 0.9rem;
+      }
+    }
   </style>
 </head>
 <body>
